--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "thinkpos",
   "version": "1.0.0",
-  "description": "Thanks for downloading this template!",
+  "description": "using quotes to inspire a positive change",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -15,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/nayak1329/ThinkPos/issues"
   },
-  "homepage": "https://github.com/nayak1329/ThinkPos#readme",
+  "homepage": "https://github.com/nayak1329/ThinkPos",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
