--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "sanitize": "^2.1.0",
+    "xss": "^1.0.7"
   }
 }
